# Pipeline-de-Dados-com-IoT-e-Docker

./: README.md  pyproject.toml
pipeline_dados/: create_views.py  data_loader.py  postgres_manager.py  streamlit_app.py
